[package]
name = "wallet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
rand_core = { version = "0.6.4", features = ["std"] }
bip32 = { version = "0.4.0" }
anyhow = "1.0.68"
ring = "0.16.20"
hex = "0.4.3"
ripemd = "0.1.3"
sha2 = "0.10.6"
